# coalassistant

./: .gitignore  CLAUDE.md  CLOUDFLARE.md  README.md  migrate_json_to_sqlite.mjs  schema.sql  wrangler.jsonc
.github/workflows/: ci.yml  deploy-web.yml  flutter-hap.yml  release.yml
blend_kit_rs/: Cargo.toml  README.md
blend_kit_rs/data/: coal_master.csv  coal_master.json
blend_kit_rs/docs/: JSON_SCHEMA.md
blend_kit_rs/examples/: demo.rs  master_demo.rs
blend_kit_rs/src/: lib.rs  model.rs  optimizer.rs  predict.rs  seed.rs
blend_kit_wasm/: Cargo.toml  test_wasm_solve.mjs
blend_kit_wasm/src/: lib.rs
ci_drafts/: README.md  ci.yml  flutter-hap.yml
cloudflare/: schema.sql
deploy/: Caddyfile  README.md  setup.sh
deploy/systemd/: doudou-blend.service
doudou_blend/: build.sh  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts  wrangler.toml
doudou_blend/public/: coal_master.json  manifest.webmanifest  sw.js
doudou_blend/server/: app.test.ts  app.ts  db.ts  index.ts  tsconfig.json
doudou_blend/src/: App.css  App.tsx  CoalEditor.tsx  ContractDetailDialog.tsx  CustomerDialog.tsx  LoginScreen.tsx  NewCoalDialog.tsx  NewContractDialog.tsx  PaymentDialog.tsx  QuoteDetailDialog.tsx  SaveQuoteDialog.tsx  ShipmentDialog.tsx  TabBar.tsx  api.ts  backend.ts  main.tsx  master_loader.ts  storage.ts  types.ts
doudou_blend/src-tauri/: Cargo.toml  tauri.conf.json
doudou_blend/worker/: index.test.ts  index.ts  tsconfig.json
doudou_blend_flutter/: README.md  build_rust.sh  pubspec.yaml
mockup/: dougeruan_mobile.html
(+54 files in other folders)
