[package]
name = "blend_kit"
version = "0.1.0"
edition = "2021"
description = "豆哥配煤 - 配煤优化核心算法 (Rust)"

[lib]
name = "blend_kit"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
clarabel = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[example]]
name = "demo"
path = "examples/demo.rs"
